--- a/notebooks/training-results-fp16-batched.ipynb
+++ b/notebooks/training-results-fp16-batched.ipynb
@@ -10,12 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/tae898/repos/erc/results\n"
+      "/home/tk/repos/erc\n"
      ]
     }
    ],
    "source": [
-    "%cd /home/tae898/repos/erc/results"
+    "%cd .."
    ]
   },
   {
@@ -31,66 +31,7 @@
     "import numpy as np\n",
     "from pprint import pprint\n",
     "import yaml\n",
-    "\n",
-    "\n",
-    "def read_json(path):\n",
-    "    with open(path, 'r') as stream:\n",
-    "        foo = json.load(stream)\n",
-    "    return foo\n",
-    "\n",
-    "def read_yaml(path):\n",
-    "    with open(path, 'r') as stream:\n",
-    "        foo = yaml.load(stream)\n",
-    "    return foo\n",
-    "\n",
-    "def parse_path(path):\n",
-    "    \n",
-    "    try:\n",
-    "        kwargs = read_yaml(path)\n",
-    "\n",
-    "        DIR = '/'.join(path.split('/')[:-1])\n",
-    "        splits = path.split('/')\n",
-    "        timestamp = splits[2]\n",
-    "\n",
-    "        hp = read_json(os.path.join(DIR, 'hp.json'))\n",
-    "\n",
-    "        kwargs['timestamp'] = timestamp\n",
-    "        kwargs['peak_learning_rate'] = hp['learning_rate']\n",
-    "        kwargs['path'] = path\n",
-    "\n",
-    "        for SPLIT in ['val', 'test']:\n",
-    "            kwargs[f\"{SPLIT}_results\"] = {path.split('/')[-2]: read_json(path) for path in glob(os.path.join(DIR, f'*/{SPLIT}-results.json'))}\n",
-    "\n",
-    "            metrics = set([key_ for key, val in kwargs[f\"{SPLIT}_results\"].items() for key_, val_ in val.items()])\n",
-    "            metrics = {metric: [] for metric in metrics}\n",
-    "\n",
-    "            for key, val in kwargs[f\"{SPLIT}_results\"].items():\n",
-    "                for key_, val_ in val.items():\n",
-    "                    metrics[key_].append(val_)\n",
-    "\n",
-    "            kwargs[f\"{SPLIT}_results_mean_std\"] = {metric: {'mean': np.mean(numbers), 'std': np.std(numbers), 'num_samples': len(numbers)} for metric, numbers in metrics.items()}\n",
-    "    except:\n",
-    "        return None\n",
-    "        \n",
-    "    return kwargs\n",
-    "\n",
-    "def print_what_you_want(seed_results, what_you_want=['NUM_TRAIN_EPOCHS','ADD_BOU_EOU', 'ADD_SPEAKER_TOKENS', 'REPLACE_NAMES_IN_UTTERANCES', 'SPEAKER_SPLITS', \n",
-    "                                                     'model_checkpoint', 'num_past_utterances',\n",
-    "                                                     'num_future_utterances', 'path'],\n",
-    "                       metric='f1_weighted'):\n",
-    "    \n",
-    "    seed_results = sorted(seed_results, key=lambda x:-x['test_results_mean_std'][f'test_{metric}']['mean'])\n",
-    "    for results in seed_results:\n",
-    "        for key, val in results.items():\n",
-    "            if key in what_you_want:\n",
-    "                print(f\"{key}: {val}\")\n",
-    "            elif key in ['test_results_mean_std', 'val_results_mean_std']:\n",
-    "                try:\n",
-    "                    print(f\"{key}: {val[f'eval_{metric}']}\")\n",
-    "                except Exception as e:\n",
-    "                    print(f\"{key}: {val[f'test_{metric}']}\")\n",
-    "            \n",
-    "        print()"
+    "from utils import read_json, read_yaml, parse_path, print_what_you_want"
    ]
   },
   {
@@ -99,14 +40,6 @@
    "id": "a10c8838",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tae898/.virtualenvs/dev-python3.7/lib/python3.7/site-packages/ipykernel_launcher.py:16: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
-      "  app.launch_new_instance()\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -119,7 +52,7 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 1000\n",
-      "path: MELD/roberta-large/2021-05-23-00-20-58/kwargs.yaml\n",
+      "path: results/MELD/roberta-large/2021-05-23-00-20-58/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6656117597833641, 'std': 0.0040266001504017405, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.6599520431830781, 'std': 0.0030177701645355314, 'num_samples': 5}\n",
       "\n",
@@ -131,9 +64,9 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 1000\n",
       "num_past_utterances: 1000\n",
-      "path: MELD/roberta-large/2021-05-20-16-56-34/kwargs.yaml\n",
+      "path: results/MELD/roberta-large/2021-05-20-16-56-34/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6686652146473812, 'std': 0.004997745487902269, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6575477018909653, 'std': 0.006508369657209566, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6575477018909653, 'std': 0.006508369657209565, 'num_samples': 5}\n",
       "\n",
       "ADD_BOU_EOU: True\n",
       "ADD_SPEAKER_TOKENS: True\n",
@@ -143,7 +76,7 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 1000\n",
-      "path: MELD/roberta-large/2021-05-22-16-24-22/kwargs.yaml\n",
+      "path: results/MELD/roberta-large/2021-05-22-16-24-22/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6548251759564849, 'std': 0.01104238147684164, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.6533979761774205, 'std': 0.0023464570483140122, 'num_samples': 5}\n",
       "\n",
@@ -153,8 +86,8 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 1000\n",
       "num_past_utterances: 1000\n",
-      "path: MELD/roberta-large/2021-05-20-07-38-38/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.665087533747173, 'std': 0.0038348571834108777, 'num_samples': 5}\n",
+      "path: results/MELD/roberta-large/2021-05-20-07-38-38/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.6650875337471731, 'std': 0.0038348571834108777, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.6507362119375834, 'std': 0.004210611377095193, 'num_samples': 5}\n",
       "\n",
       "ADD_BOU_EOU: True\n",
@@ -165,8 +98,8 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 1000\n",
-      "path: MELD/roberta-large/2021-05-22-21-09-43/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6532265648214453, 'std': 0.005606102491473615, 'num_samples': 5}\n",
+      "path: results/MELD/roberta-large/2021-05-22-21-09-43/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.6532265648214453, 'std': 0.005606102491473616, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.6492835061900128, 'std': 0.002478100625780327, 'num_samples': 5}\n",
       "\n",
       "ADD_BOU_EOU: False\n",
@@ -177,7 +110,7 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 1000\n",
       "num_past_utterances: 1000\n",
-      "path: MELD/roberta-large/2021-05-23-15-18-33/kwargs.yaml\n",
+      "path: results/MELD/roberta-large/2021-05-23-15-18-33/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6628276674549309, 'std': 0.002763070786905131, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.6439918445170798, 'std': 0.006735768527653271, 'num_samples': 5}\n",
       "\n",
@@ -189,9 +122,9 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 1000\n",
-      "path: MELD/roberta-large/2021-05-23-03-31-09/kwargs.yaml\n",
+      "path: results/MELD/roberta-large/2021-05-23-03-31-09/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6453199944442842, 'std': 0.007643082518507616, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6411017113900292, 'std': 0.002140419621476945, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6411017113900292, 'std': 0.0021404196214769447, 'num_samples': 5}\n",
       "\n",
       "ADD_BOU_EOU: False\n",
       "ADD_SPEAKER_TOKENS: True\n",
@@ -201,7 +134,7 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 0\n",
-      "path: MELD/roberta-large/2021-05-24-00-37-43/kwargs.yaml\n",
+      "path: results/MELD/roberta-large/2021-05-24-00-37-43/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6320614187993957, 'std': 0.004030412327294888, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.6406618487687537, 'std': 0.0037712146009489314, 'num_samples': 5}\n",
       "\n",
@@ -213,9 +146,9 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 0\n",
-      "path: MELD/roberta-large/2021-05-23-23-07-11/kwargs.yaml\n",
+      "path: results/MELD/roberta-large/2021-05-23-23-07-11/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6285462602570314, 'std': 0.006129177621849545, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6376766452980035, 'std': 0.0030272891826040667, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6376766452980036, 'std': 0.0030272891826040667, 'num_samples': 5}\n",
       "\n",
       "ADD_BOU_EOU: False\n",
       "ADD_SPEAKER_TOKENS: False\n",
@@ -225,7 +158,7 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 0\n",
-      "path: MELD/roberta-large/2021-05-24-01-22-39/kwargs.yaml\n",
+      "path: results/MELD/roberta-large/2021-05-24-01-22-39/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6190847590565978, 'std': 0.005259281331183722, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.6315405671577548, 'std': 0.0039282098090363355, 'num_samples': 5}\n",
       "\n",
@@ -237,16 +170,24 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 0\n",
-      "path: MELD/roberta-large/2021-05-23-23-52-35/kwargs.yaml\n",
+      "path: results/MELD/roberta-large/2021-05-23-23-52-35/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6053658982454417, 'std': 0.005840552927317737, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.6260683011107546, 'std': 0.006634506578377184, 'num_samples': 5}\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tk/repos/erc/utils/helper.py:19: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
+      "  foo = yaml.load(stream)\n"
      ]
     }
    ],
    "source": [
     "DATASET = 'MELD'\n",
-    "seed_results = glob(f'{DATASET}/*/*/kwargs.yaml')\n",
+    "seed_results = glob(f'results/{DATASET}/*/*/kwargs.yaml')\n",
     "seed_results = [parse_path(foo) for foo in seed_results]\n",
     "seed_results = [foo for foo in seed_results if foo is not None]\n",
     "\n",
@@ -271,8 +212,8 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 1000\n",
-      "path: IEMOCAP/roberta-large/2021-05-23-06-32-57/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.639407090700274, 'std': 0.006785449630944273, 'num_samples': 5}\n",
+      "path: results/IEMOCAP/roberta-large/2021-05-23-06-32-57/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.639407090700274, 'std': 0.006785449630944272, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.6729432086370112, 'std': 0.01039802640970427, 'num_samples': 5}\n",
       "\n",
       "ADD_BOU_EOU: False\n",
@@ -283,9 +224,9 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 1000\n",
-      "path: IEMOCAP/roberta-large/2021-05-23-09-23-35/kwargs.yaml\n",
+      "path: results/IEMOCAP/roberta-large/2021-05-23-09-23-35/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6432150991248053, 'std': 0.006382897574177879, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6728331903835669, 'std': 0.010252957568712197, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6728331903835668, 'std': 0.010252957568712197, 'num_samples': 5}\n",
       "\n",
       "ADD_BOU_EOU: True\n",
       "ADD_SPEAKER_TOKENS: True\n",
@@ -295,9 +236,9 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 1000\n",
-      "path: IEMOCAP/roberta-large/2021-05-21-07-58-04/kwargs.yaml\n",
+      "path: results/IEMOCAP/roberta-large/2021-05-21-07-58-04/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6354102344882537, 'std': 0.007479580896926068, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6717431853060252, 'std': 0.011817089209503596, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6717431853060253, 'std': 0.011817089209503596, 'num_samples': 5}\n",
       "\n",
       "ADD_BOU_EOU: False\n",
       "ADD_SPEAKER_TOKENS: False\n",
@@ -307,9 +248,9 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 1000\n",
-      "path: IEMOCAP/roberta-large/2021-05-23-12-12-54/kwargs.yaml\n",
+      "path: results/IEMOCAP/roberta-large/2021-05-23-12-12-54/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6368070587601505, 'std': 0.005503372060419054, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6699956532724268, 'std': 0.009597679865673616, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6699956532724268, 'std': 0.009597679865673614, 'num_samples': 5}\n",
       "\n",
       "ADD_BOU_EOU: False\n",
       "ADD_SPEAKER_TOKENS: True\n",
@@ -319,7 +260,7 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 1000\n",
       "num_past_utterances: 1000\n",
-      "path: IEMOCAP/roberta-large/2021-05-23-20-12-14/kwargs.yaml\n",
+      "path: results/IEMOCAP/roberta-large/2021-05-23-20-12-14/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6341660083503748, 'std': 0.005284922188394338, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.6680474310314481, 'std': 0.012476288862787337, 'num_samples': 5}\n",
       "\n",
@@ -329,7 +270,7 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 1000\n",
-      "path: IEMOCAP/roberta-large/2021-05-20-12-18-21/kwargs.yaml\n",
+      "path: results/IEMOCAP/roberta-large/2021-05-20-12-18-21/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.6450422495707426, 'std': 0.005384103773460158, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.6672697209730378, 'std': 0.012424630010884955, 'num_samples': 5}\n",
       "\n",
@@ -341,9 +282,9 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 1000\n",
       "num_past_utterances: 1000\n",
-      "path: IEMOCAP/roberta-large/2021-05-21-10-52-11/kwargs.yaml\n",
+      "path: results/IEMOCAP/roberta-large/2021-05-21-10-52-11/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.628585550422734, 'std': 0.0076105989657946965, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6507805161753201, 'std': 0.011853042877419189, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6507805161753201, 'std': 0.01185304287741919, 'num_samples': 5}\n",
       "\n",
       "ADD_BOU_EOU: False\n",
       "ADD_SPEAKER_TOKENS: True\n",
@@ -353,7 +294,7 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 0\n",
-      "path: IEMOCAP/roberta-large/2021-05-24-02-37-40/kwargs.yaml\n",
+      "path: results/IEMOCAP/roberta-large/2021-05-24-02-37-40/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.5681892492423589, 'std': 0.005054735953631714, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.5722075309364433, 'std': 0.008779504477719285, 'num_samples': 5}\n",
       "\n",
@@ -365,8 +306,8 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 0\n",
-      "path: IEMOCAP/roberta-large/2021-05-24-02-09-06/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.5795123397142943, 'std': 0.00624494639876603, 'num_samples': 5}\n",
+      "path: results/IEMOCAP/roberta-large/2021-05-24-02-09-06/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.5795123397142942, 'std': 0.00624494639876603, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.5617839661306163, 'std': 0.004559314572608069, 'num_samples': 5}\n",
       "\n",
       "ADD_BOU_EOU: True\n",
@@ -377,8 +318,8 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 0\n",
-      "path: IEMOCAP/roberta-large/2021-05-24-03-06-35/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.539277700045861, 'std': 0.006210637385670695, 'num_samples': 5}\n",
+      "path: results/IEMOCAP/roberta-large/2021-05-24-03-06-35/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.539277700045861, 'std': 0.006210637385670696, 'num_samples': 5}\n",
       "test_results_mean_std: {'mean': 0.5226184054597212, 'std': 0.004050589092618675, 'num_samples': 5}\n",
       "\n",
       "ADD_BOU_EOU: False\n",
@@ -389,24 +330,16 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 0\n",
-      "path: IEMOCAP/roberta-large/2021-05-24-03-35-31/kwargs.yaml\n",
+      "path: results/IEMOCAP/roberta-large/2021-05-24-03-35-31/kwargs.yaml\n",
       "val_results_mean_std: {'mean': 0.494597671523987, 'std': 0.16315813820199582, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.47377459919228215, 'std': 0.19295574975978388, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.47377459919228215, 'std': 0.19295574975978386, 'num_samples': 5}\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tae898/.virtualenvs/dev-python3.7/lib/python3.7/site-packages/ipykernel_launcher.py:16: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
-      "  app.launch_new_instance()\n"
      ]
     }
    ],
    "source": [
     "DATASET = 'IEMOCAP'\n",
-    "seed_results = glob(f'{DATASET}/*/*/kwargs.yaml')\n",
+    "seed_results = glob(f'results/{DATASET}/*/*/kwargs.yaml')\n",
     "seed_results = [parse_path(foo) for foo in seed_results]\n",
     "seed_results = [foo for foo in seed_results if foo is not None]\n",
     "\n",
