--- a/notebooks/training-results-fp16-batched.ipynb
+++ b/notebooks/training-results-fp16-batched.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/tk/repos/erc\n"
+      "/home/tae898/repos/erc\n"
      ]
     }
    ],
@@ -44,7 +44,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ADD_BOU_EOU: False\n",
+      "ADD_BOU: False\n",
+      "ADD_EOU: False\n",
       "ADD_SPEAKER_TOKENS: True\n",
       "NUM_TRAIN_EPOCHS: 5\n",
       "REPLACE_NAMES_IN_UTTERANCES: False\n",
@@ -52,45 +53,12 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 1000\n",
-      "path: results/MELD/roberta-large/2021-05-23-00-20-58/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6656117597833641, 'std': 0.0040266001504017405, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6599520431830781, 'std': 0.0030177701645355314, 'num_samples': 5}\n",
+      "path: results/MELD/roberta-large/2021-06-01-06-07-57/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.6562843752910095, 'std': 0.0048876337584414275, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6496687608560628, 'std': 0.0047592259721740094, 'num_samples': 5}\n",
       "\n",
-      "ADD_BOU_EOU: True\n",
-      "ADD_SPEAKER_TOKENS: True\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 1000\n",
-      "num_past_utterances: 1000\n",
-      "path: results/MELD/roberta-large/2021-05-20-16-56-34/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6686652146473812, 'std': 0.004997745487902269, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6575477018909653, 'std': 0.006508369657209565, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: True\n",
-      "ADD_SPEAKER_TOKENS: True\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 0\n",
-      "num_past_utterances: 1000\n",
-      "path: results/MELD/roberta-large/2021-05-22-16-24-22/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6548251759564849, 'std': 0.01104238147684164, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6533979761774205, 'std': 0.0023464570483140122, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: True\n",
-      "ADD_SPEAKER_TOKENS: True\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 1000\n",
-      "num_past_utterances: 1000\n",
-      "path: results/MELD/roberta-large/2021-05-20-07-38-38/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6650875337471731, 'std': 0.0038348571834108777, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6507362119375834, 'std': 0.004210611377095193, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: True\n",
+      "ADD_BOU: True\n",
+      "ADD_EOU: True\n",
       "ADD_SPEAKER_TOKENS: False\n",
       "NUM_TRAIN_EPOCHS: 5\n",
       "REPLACE_NAMES_IN_UTTERANCES: False\n",
@@ -98,90 +66,10 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 1000\n",
-      "path: results/MELD/roberta-large/2021-05-22-21-09-43/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6532265648214453, 'std': 0.005606102491473616, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6492835061900128, 'std': 0.002478100625780327, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: False\n",
-      "ADD_SPEAKER_TOKENS: True\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 1000\n",
-      "num_past_utterances: 1000\n",
-      "path: results/MELD/roberta-large/2021-05-23-15-18-33/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6628276674549309, 'std': 0.002763070786905131, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6439918445170798, 'std': 0.006735768527653271, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: False\n",
-      "ADD_SPEAKER_TOKENS: False\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 0\n",
-      "num_past_utterances: 1000\n",
-      "path: results/MELD/roberta-large/2021-05-23-03-31-09/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6453199944442842, 'std': 0.007643082518507616, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6411017113900292, 'std': 0.0021404196214769447, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: False\n",
-      "ADD_SPEAKER_TOKENS: True\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 0\n",
-      "num_past_utterances: 0\n",
-      "path: results/MELD/roberta-large/2021-05-24-00-37-43/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6320614187993957, 'std': 0.004030412327294888, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6406618487687537, 'std': 0.0037712146009489314, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: True\n",
-      "ADD_SPEAKER_TOKENS: True\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 0\n",
-      "num_past_utterances: 0\n",
-      "path: results/MELD/roberta-large/2021-05-23-23-07-11/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6285462602570314, 'std': 0.006129177621849545, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6376766452980036, 'std': 0.0030272891826040667, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: False\n",
-      "ADD_SPEAKER_TOKENS: False\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 0\n",
-      "num_past_utterances: 0\n",
-      "path: results/MELD/roberta-large/2021-05-24-01-22-39/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6190847590565978, 'std': 0.005259281331183722, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6315405671577548, 'std': 0.0039282098090363355, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: True\n",
-      "ADD_SPEAKER_TOKENS: False\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 0\n",
-      "num_past_utterances: 0\n",
-      "path: results/MELD/roberta-large/2021-05-23-23-52-35/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6053658982454417, 'std': 0.005840552927317737, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6260683011107546, 'std': 0.006634506578377184, 'num_samples': 5}\n",
+      "path: results/MELD/roberta-large/2021-06-01-09-21-19/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.6518534387314564, 'std': 0.006775844426909927, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6428660949787497, 'std': 0.008723565921517358, 'num_samples': 5}\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tk/repos/erc/utils/helper.py:28: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
-      "  foo = yaml.load(stream)\n"
      ]
     }
    ],
@@ -204,19 +92,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ADD_BOU_EOU: True\n",
-      "ADD_SPEAKER_TOKENS: False\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 0\n",
-      "num_past_utterances: 1000\n",
-      "path: results/IEMOCAP/roberta-large/2021-05-23-06-32-57/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.639407090700274, 'std': 0.006785449630944272, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6729432086370112, 'std': 0.01039802640970427, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: False\n",
+      "ADD_BOU: False\n",
+      "ADD_EOU: False\n",
       "ADD_SPEAKER_TOKENS: True\n",
       "NUM_TRAIN_EPOCHS: 5\n",
       "REPLACE_NAMES_IN_UTTERANCES: False\n",
@@ -224,35 +101,12 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 1000\n",
-      "path: results/IEMOCAP/roberta-large/2021-05-23-09-23-35/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6432150991248053, 'std': 0.006382897574177879, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6728331903835668, 'std': 0.010252957568712197, 'num_samples': 5}\n",
+      "path: results/IEMOCAP/roberta-large/2021-05-31-20-58-35/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.6434923303451727, 'std': 0.013105741362095797, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6707066471947625, 'std': 0.008771320774317344, 'num_samples': 5}\n",
       "\n",
-      "ADD_BOU_EOU: True\n",
-      "ADD_SPEAKER_TOKENS: True\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 0\n",
-      "num_past_utterances: 1000\n",
-      "path: results/IEMOCAP/roberta-large/2021-05-21-07-58-04/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6354102344882537, 'std': 0.007479580896926068, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6717431853060253, 'std': 0.011817089209503596, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: False\n",
-      "ADD_SPEAKER_TOKENS: False\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 0\n",
-      "num_past_utterances: 1000\n",
-      "path: results/IEMOCAP/roberta-large/2021-05-23-12-12-54/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6368070587601505, 'std': 0.005503372060419054, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6699956532724268, 'std': 0.009597679865673614, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: False\n",
+      "ADD_BOU: False\n",
+      "ADD_EOU: False\n",
       "ADD_SPEAKER_TOKENS: True\n",
       "NUM_TRAIN_EPOCHS: 5\n",
       "REPLACE_NAMES_IN_UTTERANCES: False\n",
@@ -260,79 +114,22 @@
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 1000\n",
       "num_past_utterances: 1000\n",
-      "path: results/IEMOCAP/roberta-large/2021-05-23-20-12-14/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6341660083503748, 'std': 0.005284922188394338, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6680474310314481, 'std': 0.012476288862787337, 'num_samples': 5}\n",
+      "path: results/IEMOCAP/roberta-large/2021-06-01-03-03-58/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.6366509934734441, 'std': 0.008542158586976677, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6688823566871317, 'std': 0.006678758101777102, 'num_samples': 5}\n",
       "\n",
-      "ADD_BOU_EOU: True\n",
-      "ADD_SPEAKER_TOKENS: True\n",
+      "ADD_BOU: True\n",
+      "ADD_EOU: True\n",
+      "ADD_SPEAKER_TOKENS: False\n",
       "NUM_TRAIN_EPOCHS: 5\n",
+      "REPLACE_NAMES_IN_UTTERANCES: False\n",
+      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
       "model_checkpoint: roberta-large\n",
       "num_future_utterances: 0\n",
       "num_past_utterances: 1000\n",
-      "path: results/IEMOCAP/roberta-large/2021-05-20-12-18-21/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.6450422495707426, 'std': 0.005384103773460158, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6672697209730378, 'std': 0.012424630010884955, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: True\n",
-      "ADD_SPEAKER_TOKENS: True\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 1000\n",
-      "num_past_utterances: 1000\n",
-      "path: results/IEMOCAP/roberta-large/2021-05-21-10-52-11/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.628585550422734, 'std': 0.0076105989657946965, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.6507805161753201, 'std': 0.01185304287741919, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: False\n",
-      "ADD_SPEAKER_TOKENS: True\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 0\n",
-      "num_past_utterances: 0\n",
-      "path: results/IEMOCAP/roberta-large/2021-05-24-02-37-40/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.5681892492423589, 'std': 0.005054735953631714, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.5722075309364433, 'std': 0.008779504477719285, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: False\n",
-      "ADD_SPEAKER_TOKENS: False\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 0\n",
-      "num_past_utterances: 0\n",
-      "path: results/IEMOCAP/roberta-large/2021-05-24-02-09-06/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.5795123397142942, 'std': 0.00624494639876603, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.5617839661306163, 'std': 0.004559314572608069, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: True\n",
-      "ADD_SPEAKER_TOKENS: False\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 0\n",
-      "num_past_utterances: 0\n",
-      "path: results/IEMOCAP/roberta-large/2021-05-24-03-06-35/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.539277700045861, 'std': 0.006210637385670696, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.5226184054597212, 'std': 0.004050589092618675, 'num_samples': 5}\n",
-      "\n",
-      "ADD_BOU_EOU: False\n",
-      "ADD_SPEAKER_TOKENS: False\n",
-      "NUM_TRAIN_EPOCHS: 5\n",
-      "REPLACE_NAMES_IN_UTTERANCES: False\n",
-      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
-      "model_checkpoint: roberta-large\n",
-      "num_future_utterances: 0\n",
-      "num_past_utterances: 0\n",
-      "path: results/IEMOCAP/roberta-large/2021-05-24-03-35-31/kwargs.yaml\n",
-      "val_results_mean_std: {'mean': 0.494597671523987, 'std': 0.16315813820199582, 'num_samples': 5}\n",
-      "test_results_mean_std: {'mean': 0.47377459919228215, 'std': 0.19295574975978386, 'num_samples': 5}\n",
+      "path: results/IEMOCAP/roberta-large/2021-06-01-00-00-42/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.6403308744355306, 'std': 0.007159025710150715, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.662961336729806, 'std': 0.01836833777776763, 'num_samples': 5}\n",
       "\n"
      ]
     }
