--- a/notebooks/spaker-tokens.ipynb
+++ b/notebooks/spaker-tokens.ipynb
@@ -60,8 +60,8 @@
     }
    ],
    "source": [
-    "from utils import read_json, read_yaml, gets_DATASET_kwargs\n",
-    "from utils import get_tokenizer_model_ds, get_diaid_uttid_utts\n",
+    "from src import read_json, read_yaml, gets_DATASET_kwargs\n",
+    "from src import get_tokenizer_model_ds, get_diaid_uttid_utts\n",
     "\n",
     "model_checkpoint = 'results/MELD/roberta-large/2021-05-23-00-20-58/4/checkpoint-12490/'\n",
     "# model_checkpoint = 'results/IEMOCAP/roberta-large/2021-05-21-07-58-04/3/checkpoint-4780/'\n",
