--- a/notebooks/spectrogram.ipynb
+++ b/notebooks/spectrogram.ipynb
@@ -60,8 +60,8 @@
     }
    ],
    "source": [
-    "from utils import read_json, read_yaml, gets_DATASET_kwargs\n",
-    "from utils import get_tokenizer_model_ds, get_diaid_uttid_utts, return_coeffs\n",
+    "from src import read_json, read_yaml, gets_DATASET_kwargs\n",
+    "from src import get_tokenizer_model_ds, get_diaid_uttid_utts, return_coeffs\n",
     "\n",
     "model_checkpoint = 'results/MELD/roberta-large/2021-05-23-00-20-58/4/checkpoint-12490/'\n",
     "# model_checkpoint = 'results/IEMOCAP/roberta-large/2021-05-21-07-58-04/3/checkpoint-4780/'\n",
@@ -161,7 +161,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import librosa.display\n",
-    "from utils import load_audio, audio2spectrogram\n",
+    "from src import load_audio, audio2spectrogram\n",
     "\n",
     "sr=22050\n",
     "n_mels=128*8\n",
@@ -201,8 +201,8 @@
      "text": [
       "/home/tk/repos/erc/utils/helper.py:28: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
       "  foo = yaml.load(stream)\n",
-      "2021-05-31 21:27:32.705 INFO dataset - save_special_tokenzier: 304 speaker-specific tokens added.\n",
-      "2021-05-31 21:27:32.708 INFO dataset - save_special_tokenzier: In total of 304 special tokens added.\n",
+      "2021-05-31 21:27:32.705 INFO dataset - get_special_tokenzier: 304 speaker-specific tokens added.\n",
+      "2021-05-31 21:27:32.708 INFO dataset - get_special_tokenzier: In total of 304 special tokens added.\n",
       " 10%|▉         | 100/1038 [00:00<00:02, 461.86it/s]/home/tk/.virtualenvs/dev-python3.7/lib/python3.7/site-packages/librosa/core/audio.py:162: UserWarning: PySoundFile failed. Trying audioread instead.\n",
       "  warnings.warn(\"PySoundFile failed. Trying audioread instead.\")\n",
       "100%|██████████| 1038/1038 [00:02<00:00, 420.02it/s]\n",
@@ -215,7 +215,7 @@
     }
    ],
    "source": [
-    "from utils import ErcAudioDataset, read_yaml\n",
+    "from src import ErcAudioDataset, read_yaml\n",
     "\n",
     "audio_config = read_yaml('./train-erc-audio.yaml')\n",
     "\n",
@@ -398,8 +398,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-31 16:48:24.159 INFO dataset - save_special_tokenzier: 304 speaker-specific tokens added.\n",
-      "2021-05-31 16:48:24.161 INFO dataset - save_special_tokenzier: In total of 304 special tokens added.\n",
+      "2021-05-31 16:48:24.159 INFO dataset - get_special_tokenzier: 304 speaker-specific tokens added.\n",
+      "2021-05-31 16:48:24.161 INFO dataset - get_special_tokenzier: In total of 304 special tokens added.\n",
       "/home/tk/.virtualenvs/dev-python3.7/lib/python3.7/site-packages/librosa/core/audio.py:162: UserWarning: PySoundFile failed. Trying audioread instead.\n",
       "  warnings.warn(\"PySoundFile failed. Trying audioread instead.\")\n",
       "2021-05-31 16:48:26.536 WARNING dataset - _load_utterance_ordered: number of not existing audio files: 1\n"
