--- a/notebooks/training-results-fp16-batched.ipynb
+++ b/notebooks/training-results-fp16-batched.ipynb
@@ -31,7 +31,7 @@
     "import numpy as np\n",
     "from pprint import pprint\n",
     "import yaml\n",
-    "from utils import read_json, read_yaml, parse_path, print_what_you_want"
+    "from src import read_json, read_yaml, parse_path, print_what_you_want"
    ]
   },
   {
@@ -44,6 +44,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ADD_BOU: False\n",
+      "ADD_EOU: False\n",
+      "ADD_SPEAKER_TOKENS: True\n",
+      "NUM_TRAIN_EPOCHS: 5\n",
+      "REPLACE_NAMES_IN_UTTERANCES: False\n",
+      "SPEAKER_SPLITS: ['train', 'val', 'test']\n",
+      "model_checkpoint: roberta-large\n",
+      "num_future_utterances: 1000\n",
+      "num_past_utterances: 1000\n",
+      "path: results/MELD/roberta-large/2021-06-01-12-36-45/kwargs.yaml\n",
+      "val_results_mean_std: {'mean': 0.6724088682011764, 'std': 0.009060874948742302, 'num_samples': 5}\n",
+      "test_results_mean_std: {'mean': 0.6578266286303185, 'std': 0.006683818890420509, 'num_samples': 5}\n",
+      "\n",
       "ADD_BOU: False\n",
       "ADD_EOU: False\n",
       "ADD_SPEAKER_TOKENS: True\n",
